--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/open_identity_server?serverTimezone=UTC&useLegacyDatetimeCode=false
+    url: jdbc:mysql://192.168.16.1:3306/open_identity_server?serverTimezone=UTC&useLegacyDatetimeCode=false
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       pool-name: Hikari
@@ -50,4 +50,6 @@ logging:
       hibernate:
         SQL: INFO
         stat: INFO
+server:
+  port: 9999
 
